--- a/application/admin/view/user/admin_add.html
+++ b/application/admin/view/user/admin_add.html
@@ -15,7 +15,7 @@
         <div class="row cl">
             <label class="form-label col-xs-4 col-sm-3"><span class="c-red">*</span>用户名：</label>
             <div class="formControls col-xs-8 col-sm-9">
-                <input  type="text" class="input-text" value="" placeholder="用户名为3~15位" id="name" name="name">
+                <input type="text" class="input-text" value="" placeholder="用户名为3~15位" id="name" name="name">
             </div>
         </div>
         <div class="row cl">
@@ -27,7 +27,7 @@
         <div class="row cl">
             <label class="form-label col-xs-4 col-sm-3"><span class="c-red">*</span>真实姓名：</label>
             <div class="formControls col-xs-8 col-sm-9">
-                <input type="password" class="input-text" autocomplete="off" value=""  placeholder="姓名为3~15位" id="realname" name="realname">
+                <input type="text" class="input-text" value=""  placeholder="姓名为3~15位" id="realname" name="realname">
             </div>
         </div>
         <div class="row cl">
