--- a/application/admin/view/user/admin_list.html
+++ b/application/admin/view/user/admin_list.html
@@ -23,7 +23,7 @@
 					<a href="javascript:;" onclick="unDelete()" class="btn btn-danger radius">
 						<i class="Hui-iconfont">&#xe6e2;</i> 批量恢复</a>
 					<a href="javascript:;" onclick="admin_add('添加管理员','{:url("user/adminAdd")}','800','500')" class="btn btn-primary radius">
-					<i class="Hui-iconfont">&#xe600;</i> 添加管理员</a>
+					<i class="Hui-iconfont">&#xe600;</i> 添加用户</a>
 				</span>
 				<span class="r">共有数据：<strong>{$count}</strong> 条</span>
 			</div>
